[package]
name = "tower-sessions-rusqlite-store"
description = "(tokio-)rusqlite session store for `tower-sessions`."
version = "0.12.0"
edition = "2021"
authors = ["Patrick Recher <p@tte.io>", "Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/patte/tower-sessions-rusqlite-store"
keywords = ["axum", "sessions", "cookie", "tower", "rusqlite"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/patte/tower-sessions-rusqlite-store"
documentation = "https://docs.rs/tower-sessions-rusqlite-store"
readme = "../README.md"

[dependencies]
async-trait = "0.1.83"
rmp-serde = "1.3.0"
rusqlite = { version = "0.32.1" }
tokio-rusqlite = "0.6.0"
thiserror = "1.0.64"
time = "0.3.36"
tower-sessions-core = { version = "0.13.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.7.7"
tower-sessions = "0.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
serde = "1"

[[example]]
name = "counter"
