[package]
name = "tower-sessions-rusqlite-store"
description = "(tokio-)rusqlite session store for `tower-sessions`."
version = "0.14.0"
edition = "2021"
authors = [
  "Patrick Recher <p@tte.io>",
  "Max Countryman <hello@maxcountryman.com>",
]
license = "MIT"
homepage = "https://github.com/patte/tower-sessions-rusqlite-store"
keywords = ["axum", "sessions", "cookie", "tower", "rusqlite"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/patte/tower-sessions-rusqlite-store"
documentation = "https://docs.rs/tower-sessions-rusqlite-store"
readme = "../README.md"

[dependencies]
async-trait = "0.1.83"
rmp-serde = "1.3.0"
rusqlite = "0.37.0"
tokio-rusqlite = "0.6.0"
thiserror = "2.0.11"
time = "0.3.36"
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.8"
tower-sessions = "0.14.0"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-test = "0.4.4"
serde = "1"

[[example]]
name = "counter"
