[package]
name = "tower-sessions-rusqlite-store"
description = "(tokio-)rusqlite session store for `tower-sessions`."
version = "0.14.1"
edition = "2021"
authors = [
  "Patrick Recher <p@tte.io>",
  "Max Countryman <hello@maxcountryman.com>",
]
license = "MIT"
homepage = "https://github.com/patte/tower-sessions-rusqlite-store"
keywords = ["axum", "sessions", "cookie", "tower", "rusqlite"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/patte/tower-sessions-rusqlite-store"
documentation = "https://docs.rs/tower-sessions-rusqlite-store"
readme = "../README.md"

[dependencies]
async-trait = "0.1.89"
rmp-serde = "1.3.0"
rusqlite = "0.37.0"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
thiserror = "2.0.17"
time = "0.3.44"
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.8.7"
tower-sessions = "0.14.0"
tokio-rusqlite = { version = "0.7.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"
serde = "1.0.228"

[[example]]
name = "counter"
