[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
axum = "0.8"
http = "1.1"
http-body-util = "0.1"
hyper = "1.4"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-cookies = "0.11.0"
tower-sessions = "0.14.0"
tower-sessions-rusqlite-store = { path = "../rusqlite-store/" }

[[test]]
name = "test_integration"
path = "test-integration.rs"
